Add 'Working Process' and 'Featured Work' blocks

--- a/index.html
+++ b/index.html
@@ -27,8 +27,55 @@
 					<input id="btn" type="button" value="Send Message">
 				</form>
 			</header>
-			<div class="work-process"></div>
-			<div class="featured-work"></div>
+			<div class="work-process">
+				<div class="description">
+					<h1><span>Working</span> Process</h1>
+					<p>Lorem ipsum dolor sit amet consectet ur adipiscing elit  Vestibulum bibend um vestibulum.</p>
+				</div>
+				<ul>
+					<li>
+						<i class="fa fa-magnet fa-3x" aria-hidden="true"></i>
+						<h3>Koc Koi Tomi</h3>
+						<p>Lorem ipsum is dummy lorem very dumy</p>
+						<div class="btn"><p>+ Know More</p></div>
+					</li>
+					<li>
+						<i class="fa fa-bug fa-3x" aria-hidden="true"></i>
+						<h3>Koimona Set</h3>
+						<p>Lorem ipsum is dummy you   lorem very dumyL is </p>
+						<div class="btn"><p>+ Know More</p></div>
+					</li>
+					<li>
+						<i class="fa fa-cogs fa-3x" aria-hidden="true"></i>
+						<h3>Setting Koire</h3>
+						<p>Lorem ipsum is dummy lorem very yLorem ipsus </p>
+						<div class="btn"><p>+ Know More</p></div>
+					</li>
+					<li>
+						<i class="fa fa-camera-retro fa-3x" aria-hidden="true"></i>
+						<h3>Ko Image Lara</h3>
+						<p>Lorem ipsum is dummy ry dumyLorem ipsum is </p>
+						<div class="btn"><p>+ Know More</p></div>
+					</li>
+				</ul>
+			</div>
+			<div class="featured-work">
+				<div class="description">
+					<h1><span>Featured</span> Work</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Maiores fuga provident Libero.</p>
+				</div>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
 			<div class="services"></div>
 			<div class="team"></div>
 			<div class="client-said"></div>
