Add 'Services' block and JS code for top indents

--- a/index.html
+++ b/index.html
@@ -76,7 +76,36 @@
 					<li></li>
 				</ul>
 			</div>
-			<div class="services"></div>
+			<div class="services">
+				<div class="description">
+					<h1><span>Services</span> We Provide</h1>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit Maiores fuga provident Libero.</p>
+				</div>
+				<div class="services-container">
+					<ul>
+						<li><i class="fa fa-pie-chart fa-3x" aria-hidden="true"></i></li>
+						<li>
+							<i id="cog1" class="fa fa-cog fa-3x" aria-hidden="true"></i>
+							<i id="cog2" class="fa fa-cog fa-2x" aria-hidden="true"></i>
+							<i id="cog3" class="fa fa-cog" aria-hidden="true"></i>
+						</li>
+						<li>
+							<i id="chart" class="fa fa-bar-chart fa-3x" aria-hidden="true"></i>
+							<i id="search" class="fa fa-search" aria-hidden="true"></i>
+						</li>
+						<li><i class="fa fa-pie-chart fa-3x" aria-hidden="true"></i></li>
+					</ul>
+					<div class="services-text">
+						<h3>Modern App Design</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus earum totam ad sint error porro. Consectetur, sunt, aperiam. Magni rem optio distinctio illum consequuntur delectus nulla illo aperiam itaque cumque.</p>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel officia vitae eveniet quam rem unde facilis.</p>
+						<p>vitae eveniet quam rem unde facilis.</p>
+						<div class="btn"><p>+ Know More</p></div>
+					</div>
+					
+					<img src="img/apple-watch-mockup.png" alt="Apple" Watch="">
+				</div>
+			</div>
 			<div class="team"></div>
 			<div class="client-said"></div>
 			<div class="logo"></div>
